# micro_traffic_sim_grpc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.local  Dockerfile.server  LICENSE  Makefile  NOTICE  README.md  docker_registry.sh  publish.md
clients/go/: README.md  cell.pb.go  conflict_zones.pb.go  go.mod  go.sum  record.go  record.pb.go  service.pb.go  service_grpc.pb.go  session.pb.go  step.pb.go  tls.pb.go  trip.pb.go  uuid.pb.go
clients/go/cmd/example/: README.md  go.mod  main.go  plot_anim.gnuplot
clients/go/cmd/example_batch/: README.md  go.mod  main.go
clients/python/: README.md  pyproject.toml
clients/python/examples/: README.md  main.py  plot_anim.gnuplot
clients/python/examples/batch/: README.md  main.py
clients/python/examples/step_by_step/: README.md  main.py  plot_anim.gnuplot
clients/python/micro_traffic_sim/: __init__.py  cell_pb2_grpc.py  conflict_zones_pb2_grpc.py  record_decode.py  record_pb2.py  record_pb2.pyi  record_pb2_grpc.py  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py  session_pb2_grpc.py  step_pb2.py  step_pb2.pyi  step_pb2_grpc.py  tls_pb2_grpc.py  trip_pb2_grpc.py  uuid_pb2_grpc.py
examples/rust_client/: Cargo.toml  README.md  main.rs  plot_anim.gnuplot
examples/rust_client_batch/: Cargo.toml  README.md  main.rs
protos/: cell.proto  conflict_zones.proto  record.proto  service.proto  session.proto  step.proto  tls.proto  trip.proto  uuid.proto
scripts/: build_release.sh  gen_go.sh  gen_python.sh
src/: build.rs  lib.rs  main.rs  record.rs  server.rs
src/server/: conflict_zones.rs  grid.rs  record.rs  recordings.rs  sessions.rs  step.rs  tls.rs  trip.rs
